--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Ruth and I'm a <span class="typing-2"></span></div>
-                    <p>I was born and brought up in Edo, Nigeria to a family of five. I discovered my passion for technology quite late in life but i did not let it deter me in any way. Original trained as an estate surveyor and valuer, i quickly realized that that was not the path i was meant to be on.
+                    <p>I was born and brought up in Edo, Nigeria to a family of five. A mum whom i love with my entirety and siblings i would trade for a pack of sweets.
+                        I discovered my passion for technology quite late but once i did, it came to me as easily as breathing does. Since i started learning how to code, i have encountered multiple challenges that luckily i have been able to overcome. Now i can brag that i am a fully certified front-end developer, with multiple completed projects under my belt.
                         I decided to embark on a mission of learning, growth and self improvement by actively learning how to code. That journey has been quite demanding but rewarding nonetheless.
-                        I first started by learning HTML, CSS, the JavaScript.
-                        With all the knowledge i have been able to acquire on my own and with the help of others, i hope to land a position in a company that can support my journey and career growth, i in return would dedicate my time and services to helping that company achieve all it needs to.</p>
+                        I first started by learning HTML, CSS, the JavaScript, then i proceeeded to learn bootsrtap and then React.
+                        Currently, i am learning the technologies for back-end development (PHP and Python) so that i can( in the nearest future) boast of being a full stack developer(boast humbly i mean)
+                        With all the knowledge i have been able to acquire on my own and with the help of God Almighty, i hope to land a position in a company that can support my journey and career growth, i in return would dedicate my time and services to helping that company achieve all it needs to.</p>
                     <a href="Agbonifo Ruth IT Support.pdf">Download CV</a>
                 </div>
             </div>
