--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p> As a front-end developer, i have successfully learned the technologies of a website's fron end development, HTML, CSS and JavaScript.
+                        “As a  professional with almost two years experience, I have worked on solo and group projects and am proud to say that, i can do either efficiently. I am highly qualified and skilled in time management, effective communication, continuous improvement, operational improvement and cost delivery.”
+                         In addition to my other technical skills, i am exceptionally proficient in search engine optimization, Web design and database management. 
+                          I also possess knowledge, experience and certifications in IT support(security, operating systems, system administration and networking).</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
